modules/noosphere/taghmata/nixidy/manifests/prod/unifi-network/Middleware-unifi-default-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: unifi-default-headers
  namespace: unifi-controller
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
