modules/noosphere/taghmata/nixidy/manifests/prod/unifi-network/Namespace-unifi-controller.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: unifi-controller
