modules/noosphere/taghmata/nixidy/manifests/prod/unifi-network/Deployment-unifi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: unifi-controller
    app.kubernetes.io/instance: unifi-controller
  name: unifi
  namespace: unifi-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi-controller
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: unifi-controller
    spec:
      containers:
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: TZ
              value: Europe/London
            - name: MONGO_USER
              value: unifi
            - name: MONGO_PASS
              valueFrom:
                secretKeyRef:
                  key: unifi
                  name: unifi-mongodb-password
            - name: MONGO_HOST
              value: unifi-mongodb-rs0.unifi-controller.svc.cluster.local
            - name: MONGO_PORT
              value: "27017"
            - name: MONGO_DBNAME
              value: unifi
            - name: MONGO_AUTHSOURCE
              value: admin
            - name: MONGO_REPLICA_SET
              value: rs0
          image: lscr.io/linuxserver/unifi-network-application:20.10.25
          name: unifi
          ports:
            - containerPort: 8443
              name: web-ui
              protocol: TCP
            - containerPort: 3478
              name: stun
              protocol: UDP
            - containerPort: 10001
              name: discovery
              protocol: UDP
            - containerPort: 8080
              name: communication
              protocol: TCP
          resources:
            limits:
              cpu: 2000m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: unifi-config
