modules/noosphere/taghmata/nixidy/manifests/prod/unifi-network/Service-unifi-devices.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-devices
  namespace: unifi
spec:
  ports:
    - name: stun
      port: 3478
      protocol: UDP
      targetPort: 3478
    - name: ap-discovery
      port: 10001
      protocol: UDP
      targetPort: 10001
    - name: device-comms
      port: 8880
      protocol: TCP
      targetPort: 8880
  selector:
    app: unifi
  type: LoadBalancer
