modules/noosphere/taghmata/nixidy/manifests/prod/unifi-network/Service-unifi-web.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: noosphere
  name: unifi-web
  namespace: unifi-controller
spec:
  loadBalancerIP: 192.168.1.240
  ports:
    - name: web
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: communication
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: unifi-controller
  type: LoadBalancer
