modules/noosphere/taghmata/nixidy/manifests/prod/unifi-network/Service-unifi.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: unifi
spec:
  ports:
    - name: web-ui
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: controller
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: speedtest
      port: 6789
      protocol: TCP
      targetPort: 6789
  selector:
    app: unifi
  type: ClusterIP
