modules/noosphere/taghmata/nixidy/manifests/prod/unifi-network/IngressRoute-unifi-controller.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-external
  name: unifi-controller
  namespace: unifi-controller
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`unifi.noosphere.uk`)
      middlewares:
        - name: default-headers
      services:
        - name: unifi-tcp
          port: 8443
          scheme: https
  tls:
    secretName: unifi-tls
